# nebula-keybind-menu

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md  config.toml
.github/workflows/: rust.yml
src/: main.rs
